# Financial-Health

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  SECURITY.md  docker-compose.yml  manage.py  pyproject.toml  run.ps1  run.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml
analysis/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
analysis/migrations/: 0001_initial.py  0002_report_insight_report_analysis_re_user_id_9563ad_idx_and_more.py  0003_exportjob.py
api/: asgi.py  auth.py  celery.py  exceptions.py  middleware.py  permissions.py  settings.py  throttling.py  urls.py  wsgi.py
core/: admin.py  apps.py  models.py
core/migrations/: 0001_initial.py  0002_auditlog.py  0003_gemini_usage_log.py
core/serializers/: auth.py
core/tests/: test_phase6_hardening.py  test_tenant_isolation.py
core/urls/: __init__.py  v1.py
docs/: sample_statement.csv
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx
services/domain/: categorization.py  exceptions.py  gemini_categorization.py  gemini_cost.py  gemini_usage.py  insights.py  narration_patterns.py  normalization.py  pdf_validation.py  progress.py  recurring.py  report_aggregation.py  transaction_row.py  transaction_summary.py  upi_remark.py
services/internal/: account.py  audit.py  auth.py  categorization.py  csv_parser.py  export.py  gemini_categorization.py  gemini_usage.py  (+10 more)
statements/: admin.py  apps.py  models.py  tasks.py  urls.py
(+57 files in other folders)
