[tool.poetry]
name = "financial-health"
version = "0.1.0"
description = "Personal finance analyzer — India-first, privacy-first"
authors = ["Financial Health Team"]
readme = "README.md"
packages = [{ include = "api" }]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1"
djangorestframework = "^3.15"
djangorestframework-simplejwt = "^5.4"
django-cors-headers = "^4.6"
psycopg2-binary = "^2.9"
redis = ">=5.2,<9.0"
celery = "^5.4"
python-dotenv = "^1.0"
sentry-sdk = { version = "^2.19", extras = ["django"] }
opentelemetry-api = "^1.29"
opentelemetry-sdk = "^1.29"
opentelemetry-instrumentation-django = "^0.50b0"
drf-spectacular = ">=0.28,<0.30"
uvicorn = { version = "^0.34", extras = ["standard"] }
pandas = "^3.0.3"
pdfplumber = "^0.11.10"
pypdf = "^6.14.2"
openpyxl = "^3.1.5"
xlrd = "^2.0.2"
reportlab = "^5.0.0"
google-genai = "^2.10.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1"
isort = ">=5.13,<9.0"
pre-commit = "^4.0"
reportlab = "^5.0.0"
xlwt = "^1.3.0"

[tool.isort]
profile = "black"
line_length = 130
known_first_party = ["api", "core", "statements", "analysis", "services", "utils"]

[tool.flake8]
max-line-length = 130
extend-ignore = ["W503"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
